force-app/main/default/objects/Appointment__c/Appointment__c.object-meta.xml
<CustomObject>
    <description>The Scheduling object is used to manage and track the appointments or activities that are planned for clients.</description>
    <label>Appointment</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>