force-app/main/default/objects/Appointment__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact associated with this scheduling. This field links the scheduling to a specific client.</description>
    <inlineHelpText>Ingrese el cliente asociado a la reservación</inlineHelpText>
    <label>Cliente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reservas</relationshipLabel>
    <relationshipName>Schedulings</relationshipName>
    <type>Lookup</type>
</CustomField>