force-app/main/default/objects/Appointment__c/fields/Scheduling_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Date__c</fullName>
    <description>The date when the scheduling is planned to take place.</description>
    <inlineHelpText>Ingrese la fecha de reservación</inlineHelpText>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>