force-app/main/default/objects/Appointment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The current status of the reservation (e.g., Pending, Confirmed, Canceled). This field tracks the state of the appointment.&quot;</description>
    <inlineHelpText>Indica el estado actual de la reserva</inlineHelpText>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <label>Programado</label>
            </value>
            <value>
                <fullName>Pending Payment</fullName>
                <label>En espera de pago</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Completado</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <label>Cancelado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>