force-app/main/default/objects/Appointment__c/fields/Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration__c</fullName>
    <description>The total duration of the scheduling, calculated by summing the durations of all related items in the scheduling.</description>
    <inlineHelpText>Duración total de la reserva</inlineHelpText>
    <label>Duración total</label>
    <summarizedField>Appointment_Item__c.Duration__c</summarizedField>
    <summaryForeignKey>Appointment_Item__c.Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>