force-app/main/default/objects/Appointment__c/fields/Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Value__c</fullName>
    <description>The total value of the scheduling, calculated by summing the costs of all related items in the scheduling.</description>
    <inlineHelpText>Valor total de la reserva</inlineHelpText>
    <label>Valor total</label>
    <summarizedField>Appointment_Item__c.Value__c</summarizedField>
    <summaryForeignKey>Appointment_Item__c.Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>