force-app/main/default/objects/Appointment__c/validationRules/Contact_must_be_over_18.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_must_be_over_18</fullName>
    <active>true</active>
    <description>This validation rule ensures that no scheduling can be created for a client under the age of 18 unless a responsible contact is assigned</description>
    <errorConditionFormula>IF(Client__r.Age__c &lt; 18  &amp;&amp; ISBLANK(Client__r.ReportsToId), TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Client__c</errorDisplayField>
    <errorMessage>El cliente es menor de edad y no tiene una persona responsable</errorMessage>
</ValidationRule>